# venusian

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTING.rst  CONTRIBUTORS.txt  MANIFEST.in  README.rst  README.txt  buildout.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-tests.yml
docs/: Makefile  api.rst  conf.py  glossary.rst  index.rst
src/venusian/: __init__.py  advice.py  compat.py
src/venusian/tests/: test_venusian.py
tests/: test_advice.py  test_venusian.py
tests/fixtures/: __init__.py  category.py  class_and_method.py  classdecorator.py  inheritance.py  lifting1.py  lifting2.py  lifting3.py  lifting4.py  lifting5.py  subclassing.py
tests/fixtures/attrerror/: will_cause_import_error.py
tests/fixtures/import_and_scan/: mock.py  one.py  two.py
tests/fixtures/importonly/: one.py
tests/fixtures/nested/sub1/: __init__.py
tests/fixtures/one/: module.py  module2.py
tests/fixtures/pyc/subpackage/: __init__.py
tests/fixtures/subpackages/: __init__.py
tests/fixtures/two/: mod1.py
venusian/: .coverage  __init__.py  advice.py
venusian/compat/: __init__.py
venusian/tests/: test_advice.py  test_venusian.py
venusian/tests/fixtures/: __init__.py  category.py  class_and_method.py  classdecorator_and_methoddecorator_mix.py  lifting3.py
venusian/tests/fixtures/attrerror_package/will_cause_import_error/: __init__.py
venusian/tests/fixtures/import_and_scan/: decorators.py  mock.py  one.py  two.py
venusian/tests/fixtures/importerror_package/will_cause_import_error/: __init__.py
venusian/tests/fixtures/one/: module.py
venusian/tests/fixtures/pyc/subpackage/: __init__.py
venusian/tests/fixtures/recursion/: __init__.py
venusian/tests/fixtures/subpackages/childpackage/: test_wonttest.py  will_cause_import_error.py
