[metadata]
name = venusian
version = 2.0.0
description = A library for deferring decorator actions
long_description = file: README.rst, CHANGES.rst, LICENSE.txt
long_description_content_type = text/x-rst
keywords = web wsgi zope
license = BSD-derived (http://www.repoze.org/LICENSE.txt)
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
url = https://pylonsproject.org/
author = Chris McDonough, Agendaless Consulting
author_email = pylons-devel@googlegroups.com
python_requires = >=3.5

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest
    pytest-cov
    coverage
docs =
    Sphinx
    repoze.sphinx.autointerface

[bdist_wheel]
universal=1

[tool:pytest]
ignore=tests/fixtures/
python_files = test_*.py
testpaths =
    tests
addopts = -W always --cov --cov-report=term-missing
